--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,6 @@ android {
             manifestPlaceholders =[BAIDUMOBAD_CHANNEL : "xiaomi"]
         }
         huawei {}
-//        productFlavors.all { flavor ->
-//            flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
-//        }
     }
 }
 
@@ -49,12 +46,12 @@ kapt {
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     compile 'com.zhy:percent-support-extends:1.1.1'
-    xiaomiCompile 'com.zhy:autolayout:1.4.5'
+    compile 'com.zhy:autolayout:1.4.5'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
-    xiaomiCompile 'org.greenrobot:eventbus:3.0.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
     kapt "com.android.databinding:compiler:2.3.0"
     compile 'com.squareup.okio:okio:1.13.0'
     compile 'com.google.code.gson:gson:2.8.1'
