--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,29 +40,29 @@ android {
     }
 }
 
-kapt {
-    generateStubs = true
-}
+//kapt {
+//    generateStubs = true
+//}
 dependencies {
-//    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
-    compile 'com.zhy:percent-support-extends:1.1.1'
-    compile 'com.zhy:autolayout:1.4.5'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0'
-    compile 'org.greenrobot:eventbus:3.0.0'
+    implementation 'com.zhy:percent-support-extends:1.1.1'
+    implementation 'com.zhy:autolayout:1.4.5'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.0'
+    implementation 'org.greenrobot:eventbus:3.0.0'
     kapt "com.android.databinding:compiler:2.3.0"
-    compile 'com.squareup.okio:okio:1.13.0'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    compile 'com.facebook.fresco:fresco:1.5.0'
-    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
+    implementation 'com.squareup.okio:okio:1.13.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+//    implementation 'com.facebook.fresco:fresco:1.5.0'
+//    implementation 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 repositories {
     mavenCentral()
