--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:theme="@style/AppTheme">
         <meta-data android:name="design_width" android:value="768"/>
         <meta-data android:name="design_height" android:value="1280"/>
+        <meta-data android:name="TINKER_ID" android:value="tinker_id_b168b32"/>
         <activity android:name=".ui.KotlinActivity">
 
             <intent-filter>
